<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Diploma Quiz</string>
    <string name="getStartTxt">Welcome to our app. The app is excellent for diploma holders and shares with friends.</string>
    <string name="create_account">Create Account</string>
    <string name="already_account">I Already Have An Account</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account_description">Please enter your username,email address and password.</string>
    <string name="remember_me">Remember me</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="enter_username">Username</string>
    <string name="enter_email">a@gmail.com</string>
    <string name="enter_password">Password</string>
    <string name="hello_there">Hello there</string>
    <string name="forgotten_password">Forgotten password?</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="go_to_home">Go to Home</string>
    <string name="comment_new_password">You have successfully reset and created a new password.</string>
    <string name="for_pass_des">Enter your email address to get an OTP code to reset your password.</string>
    <string name="continues">Continue</string>
    <string name="forgotten">Forgot Password</string>
    <string name="verifyMailDes">We have sent the OTP verification code to your email address. Check your email and enter the code below.</string>
    <string name="create_a_new_password">Create a new password</string>
    <string name="confirm_a_new_password">Confirm a new password</string>
    <string name="CreateNewPassDes">Save the new password in a safe place.If you forget it then you have to do a forgot password again.</string>
    <string name="quiz">MCQ</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="live_quiz">Live Exam</string>
    <string name="group_quiz">Group Exam</string>
    <string name="group_syllabus">Job Syllabus</string>
    <string name="leaderboard">Live Exam Score</string>
    <string name="special_exam">Special Exam</string>

    <string name="security_txt"><![CDATA[
    <p>আপনার নিরাপত্তা আমাদের সর্বোচ্চ অগ্রাধিকার। আপনার অ্যাকাউন্ট সুরক্ষিত রাখতে নিরাপত্তার অপশনগুলি কাস্টমাইজ করুন।</p>
    <p><b>বায়োমেট্রিক আইডি</b>, <b>ফেস আইডি</b> এবং <b>টু-ফ্যাক্টর অথেন্টিকেশন</b>-এর মতো ফিচার চালু বা বন্ধ করুন।</p>
    <p>অতিরিক্ত নিরাপত্তার জন্য আপনার ডিভাইস ব্যবস্থাপনা করুন এবং আপনার ক্রেডেনশিয়াল যেকোনো সময় আপডেট করুন।</p>
    <p><i>আমরা আপনাকে পরামর্শ দিচ্ছি, আপনার অ্যাকাউন্ট আরও সুরক্ষিত রাখতে এসএমএস অথেন্টিকেটর বা গুগল অথেন্টিকেটরের মতো অন্তত একটি অতিরিক্ত সুরক্ষা স্তর সক্রিয় করুন।</i></p>
]]></string>

    <string name="help_center_txt"><![CDATA[
    <h1><b>আমাদের হেল্প সেন্টারে স্বাগতম!</b></h1>
    <p>আমরা এখানে আপনাকে সাহায্য করতে প্রস্তুত। নিচে আমাদের হেল্প সেন্টারের বিষয় গুলো দেওয়া হলো। প্রয়োজন অনুযায়ী বিষয় নির্বাচন করুন:</p>

    <ul>
        <li><b>অ্যাকাউন্ট সংক্রান্ত সমস্যাগুলি:</b> লগইন সমস্যা, পাসওয়ার্ড রিসেট, অথবা অ্যাকাউন্ট রিকভারি সম্পর্কিত সহায়তা।</li>
        <li><b>ফিচার ব্যবহার:</b> আমাদের অ্যাপের ফিচারগুলো কীভাবে সর্বোচ্চ ব্যবহার করবেন তার টিপস এবং গাইড।</li>
        <li><b>নিরাপত্তা এবং গোপনীয়তা:</b> আপনার অ্যাকাউন্ট সুরক্ষিত রাখতে প্রয়োজনীয় নিরাপত্তা সেটআপ।</li>
    </ul>

        <h2><b>যোগাযোগ করুন:</b></h2>
        <p>সরাসরি আমাদের সাথে যোগাযোগ করুন:</p>
        <p><b>ইমেল:</b> mehedihasan231199@gmail.com</p>
        <p><b>ফোন:</b> +8801733-888950</p>

        <p><b>নোট:</b> আমাদের সাপোর্ট টিম রবিবার থেকে বৃহস্পতিবার সকাল ৯টা থেকে বিকাল ৫টা পর্যন্ত অনলাইনে থাকে।</p>

        <h3><b>আপনার ফিডব্যাক গুরুত্বপূর্ণ:</b></h3>
        <p>আপনার অভিজ্ঞতার আলোকে আমাদের মতামত দিন। আমাদের Apps কে আরও কার্যকর করার জন্য আপনার পরামর্শের অপেক্ষায় আছি।</p>
        <p><i>ধন্যবাদ!</i></p>]]>
    </string>
    <string name="department_study_description">জব এবং ডুয়েট এডমিশন এর জন্য ডিপার্টমেন্ট MCQ পড়াশোনা</string>
    <string name="department_exam_description">ডিপার্টমেন্ট MCQ পরীক্ষা </string>
    <string name="non_department_study_description">জবের জন্য নন-ডিপার্টমেন্ট MCQ পড়াশোনা </string>


    <!-- Developer Information -->
    <string-array name="developer_info">
        <item>Hello 👋,</item>
        <item>I am Mehdi Hasan</item>
        <item>I am an Android Developer</item>
        <item tools:ignore="StringEscaping">আমি কম্পিউটার সায়েন্স অ্যান্ড ইঞ্জিনিয়ারিং (CSE) তে স্নাতক ডিগ্রি অর্জন করছি। </item>
        <item>দক্ষতা: Android Development/HTML-5/CSS-3/XML/Java/MySQL</item>
        <item>I have strong technical skills in Android Development and SQL Server databases.</item>
    </string-array>

    <!-- Developer Contact Information as Array -->
    <string-array name="developer_contact_info" translatable="true">
        <item>He is an experienced Android developer with a passion for coding and building high-quality mobile applications. He specializes in Java and Kotlin programming languages, and has worked on a variety of projects ranging from educational apps to entertainment apps.</item>
        <item>Email: mehedinnf@gmail.com</item>
        <item>Phone: +8801615978718</item>
        <item>LinkedIn: https://www.linkedin.com/in/md-mehedi-hasan-292952292/</item>
        <item>GitHub: https://github.com/mehediinf</item>
        <item>Message: Feel free to contact me for any inquiries or collaborations!</item>
    </string-array>


    <string-array name="gender_array">
        <item>Option</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>


    <string-array name="fqa_title_list_header">
        <item>প্রশ্ন: এই অ্যাপটি কিভাবে কাজ করে?</item>
        <item>প্রশ্ন: অ্যাপটি ডাউনলোড করতে কী পরিমাণ জায়গা লাগবে?</item>
        <item>প্রশ্ন: আমি যদি পাসওয়ার্ড ভুলে যাই, তবে কী করব?</item>
        <item>প্রশ্ন: DiplomaQuiz App কি এবং এটি কেন ব্যবহার করা হয়?</item>
        <item>প্রশ্ন: DiplomaQuiz App কীভাবে ব্যবহার করতে হয় এবং এটি কাদের জন্য উপযোগী?</item>
        <item>প্রশ্ন: এই অ্যাপটির বিশেষত্ব কী?</item>
        <item>প্রশ্ন: আমি বিভিন্ন Diploma বা Polytechnic এ পড়ি, আমি কি এই অ্যাপটি ব্যবহার করতে পারি?</item>
        <item>প্রশ্ন: আমি কি Live Exam দিতে পারবো?</item>


    </string-array>

    <string-array name="faq_description_list_child">
        <item>উত্তর: অ্যাপটি ব্যবহার করতে, প্রথমে লগইন করুন এবং তারপর আপনার পছন্দের ফিচার নির্বাচন করুন।</item>
        <item>উত্তর: অ্যাপটি ডাউনলোড করতে ৫০ এমবি জায়গা প্রয়োজন।</item>
        <item>উত্তর: লগইন পেজে "পাসওয়ার্ড ভুলে গেছেন?" অপশনটিতে ক্লিক করুন এবং নির্ধারিত ধাপ অনুসরণ করুন।</item>
        <item>উত্তর: DiplomaQuiz App হলো একটি শিক্ষামূলক অ্যাপ, যা ডিপ্লোমা শিক্ষার্থীদের জন্য কুইজ এবং পরীক্ষার প্রস্তুতিতে সাহায্য করে।</item>
        <item>উত্তর: DiplomaQuiz App ব্যবহারের জন্য আপনাকে অ্যাপ ডাউনলোড করে নিবন্ধন করতে হবে। এটি মূলত ডিপ্লোমা শিক্ষার্থীদের জন্য ডিজাইন করা হয়েছে।</item>
        <item>উত্তর: এই অ্যাপটি শিক্ষার্থীদের MCQ প্রস্তুতি এবং নির্ভুল শিক্ষার উপাদান সরবরাহ করে। এর মাধ্যমে শিক্ষার্থীরা সহজেই নিজেদের দক্ষতা যাচাই করতে পারে।</item>
        <item>উত্তর: হ্যাঁ, যে কেউ Diploma বা Polytechnic এ পড়েন, তারা এই অ্যাপটি ব্যবহার করতে পারবেন। এটি সকল ডিপ্লোমা শিক্ষার্থীদের জন্য উপযোগী।</item>
        <item>উত্তর: অবশ্যই! অ্যাপটির মাধ্যমে আপনি Live Exam-এ অংশগ্রহণ করতে পারবেন এবং আপনার দক্ষতা পরীক্ষা করতে পারবেন।</item>


    </string-array>


</resources>