<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AlreadyCreateActivity">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#84BA44"
        android:titleTextColor="@android:color/white"
        android:title="@string/create_account" />




    <!-- Content Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFFFFF"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="16dp">

        <!-- Header Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left"
            tools:ignore="RtlHardcoded,UseCompoundDrawables">

            <TextView
                android:id="@+id/create_account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_there"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_marginEnd="8dp" />

            <ImageView
                android:id="@+id/pencil_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/wave1" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:layout_marginTop="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:text="@string/forgotten_password"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="#FFFFFF"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/btn_SignUpId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginBottom="60dp"
            android:textSize="22sp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            />

    </LinearLayout>





</LinearLayout>