<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f6f6f6"
    tools:context=".GetStartActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:src="@drawable/edu"
        android:padding="40dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:fontFamily="@font/roboto_light"
        android:text="@string/getStartTxt"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textAppearance="@font/roboto_regular"
        android:textSize="22sp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btn_CreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:textSize="22sp"
            android:background="@drawable/create_button_with_shadow"
            android:elevation="8dp"
            />

        <Button
            android:id="@+id/btn_AlreadyAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_account"
            android:textAllCaps="false"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:textSize="19sp"
            android:padding="10dp"
            android:background="@drawable/create_button_with_shadow"
            android:elevation="8dp" />


    </LinearLayout>



</LinearLayout>