<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_all"
    tools:context=".CreateNewPasswordActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/light_gray"
        android:titleTextColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_margin="20dp"
        >


        <!-- Title -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="Create new password"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/pencil_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/lock" />
        </LinearLayout>


        <!-- Subtitle -->
        <TextView
            android:id="@+id/subtitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CreateNewPassDes"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="16dp" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/create_a_new_password"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"

            >

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edt_background_style"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/gray"
                android:textColorHint="@color/dark_gray" />

            <ImageView
                android:id="@+id/toggleCrePasswordVisibility"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="0dp"
                android:src="@drawable/multimedia"
                android:contentDescription="Toggle Password Visibility"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/confirm_a_new_password"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"

            >

            <EditText
                android:id="@+id/etConNewPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_background_style"
                android:layout_weight="1"
                android:textColor="@color/gray"
                android:hint="@string/password"
                android:textColorHint="@color/dark_gray"
                android:inputType="textPassword"
                android:padding="10dp"
                />

            <ImageView
                android:id="@+id/toggleConPasswordVisibility"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="0dp"
                android:src="@drawable/multimedia"
                android:contentDescription="Toggle Password Visibility"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cbRememberMe"
            android:buttonTint="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:text="@string/remember_me"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            tools:ignore="TextViewEdits" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_ContinuePassId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continues"
        android:layout_marginBottom="60dp"
        android:background="@drawable/btn_shape_capsule"
        android:textColor="@drawable/btn_txt_selector"
        android:textSize="22sp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        />


</LinearLayout>